js/src/tests/test262/language/module-code/ambiguous-export-bindings/error-import-named-as.js












































$DONOTEVALUATE();

import { x as y } from './error-import-named_FIXTURE.js';
